--- a/source/_posts/2017-10-27-markdown.md
+++ b/source/_posts/2017-10-27-markdown.md
@@ -1,7 +1,7 @@
 ---
 title: markdown基础语法
 comments: true
-tags: markdown语法
+tags: markdown基本语法
 categories: essay
 date: 2017-10-27 16:26:07
 updated: 2017-10-27 16:26:07
