--- a/source/_posts/2017-11-02-restApi.md
+++ b/source/_posts/2017-11-02-restApi.md
@@ -1,27 +1,30 @@
 ---
-title: restApi
+title: API版本控制
 comments: true
-tags: API版本控制
-categories: restApi
+tags: RestApi规范
+categories: RestApi
 date: 2017-11-02 12:02:07
 updated: 2017-11-02 12:02:07
 ---
 
-
-# API版本控制方式
+### API版本控制方式
 1. 在URL上面区分 /api/v2
-```https://127.0.0.1/test```
+```
+    https://127.0.0.1/test
+```
 
 2. URL里面添加
-```https://127.0.0.1/test?v=2```
+```
+    https://127.0.0.1/test?v=2
+```
 
-  
 3. 用户自定义的request Header
 ```
     https://127.0.0.1/test  
     api-version: 2
-```  
-3. 利用ContentType
+```
+
+4. 利用ContentType
 ```
     https://127.0.0.1/test
     Accept: application/json; version=2.0  
