--- a/source/_posts/2017-11-02-restApi.md
+++ b/source/_posts/2017-11-02-restApi.md
@@ -1,11 +1,35 @@
 ---
-title: API版本控制
+title: RestApi设计
 comments: true
 tags: RestApi规范
 categories: RestApi
 date: 2017-11-02 12:02:07
 updated: 2017-11-02 12:02:07
 ---
+
+### API状态码说明
+HTTP状态码(HTTP Status Code)是用以表示网页服务器HTTP响应状态的3位数字代码
+
+1XX 代表请求已被接受,需要继续处理
+
+2XX  这一类型的状态码,代表请求已成功被服务器接收、理解、并接受
+
+3XX  这类状态码代表需要客户端采取进一步的操作才能完成请求
+
+4XX  这类的状态码代表了客户端看起来可能发生了错误,妨碍了服务器的处理
+
+5XX  代表了服务器在处理请求的过程中有错误或者异常状态发生
+<!-- more -->
+* 200  请求已成功,请求所希望的响应头或数据体将随此响应返回
+* 202  服务器已接受请求,但尚未处理
+* 204  服务器成功处理了请求,但不需要返回任何实体内容
+* 302  请求的资源临时从不同的 URI响应请求, 称为重定向
+* 305  被请求的资源必须通过指定的代理才能被访问
+* 403  服务器已经理解请求,但是拒绝执行它
+* 404  请求失败,请求所希望得到的资源未被在服务器上发现
+* 500  服务器遇到了一个未曾预料的状况,导致了它无法完成对请求的处理
+* 502  作为网关或者代理工作的服务器尝试执行请求时,从上游服务器接收到无效的响应.
+* 504  作为网关或者代理工作的服务器尝试执行请求时,未能及时从上游服务器(URI标识出的服务器,例如HTTP、FTP、LDAP)或者辅助服务器(例如DNS)收到响应
 
 ### API版本控制方式
 1. 在URL上面区分 /api/v2
@@ -23,7 +47,6 @@ updated: 2017-11-02 12:02:07
     https://127.0.0.1/test  
     api-version: 2
 ```
-<!-- more -->
 
 4. 利用ContentType
 ```
